# picomango

./: .gitignore  README.md  RULES.md  TODO.md
backend/: README.md  migrate_to_prod.py  pyproject.toml  requirements.txt  run_sql_queries.py
backend/api/: backends.py  models.py  serializers.py  services.py  signals.py  tests.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_item_user_prompttemplate_user_and_more.py  0003_prompttemplate_next_template.py  0004_item_is_public_prompttemplate_is_public_and_more.py
backend/core/: settings.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx
frontend/src/components/: Loader.tsx
frontend/src/components/ui/: dialog.tsx  switch.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useDocumentTitle.ts  useHistory.ts  useImageUpload.ts
frontend/src/lib/: imageCompression.ts
frontend/src/pages/: AccountPage.tsx  Home.tsx  ItemDetailPage.tsx  LoginPage.tsx  NewItemFromTemplatePage.tsx  NewItemScratchPage.tsx  SignupPage.tsx  TemplateDetailPage.tsx  TemplateEditPage.tsx
